--- a/ui/main.ui
+++ b/ui/main.ui
@@ -29,7 +29,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>rinject</string>
+   <string>dnject</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
@@ -43,7 +43,7 @@
       <string>$wag$oft present</string>
      </property>
      <property name="text">
-      <string>rinject</string>
+      <string>dnject</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignHCenter|Qt::AlignTop</set>
@@ -203,7 +203,7 @@
           </sizepolicy>
          </property>
          <property name="toolTip">
-          <string>The path to target executable that rinject will launch</string>
+          <string>The path to target executable that dnject will launch</string>
          </property>
          <property name="placeholderText">
           <string>/usr/bin/xclock</string>
@@ -265,7 +265,7 @@ Linux Only.</string>
            </sizepolicy>
           </property>
           <property name="toolTip">
-           <string>The wine prefix that rinject will run the win32 injection in</string>
+           <string>The wine prefix that dnject will run the win32 injection in</string>
           </property>
           <property name="editable">
            <bool>true</bool>
@@ -298,7 +298,7 @@ Linux Only.</string>
            </sizepolicy>
           </property>
           <property name="toolTip">
-           <string>The wine executable that rinject will use to run the win32 injection</string>
+           <string>The wine executable that dnject will use to run the win32 injection</string>
           </property>
           <property name="editable">
            <bool>true</bool>
@@ -467,7 +467,7 @@ Drag drag to reorder and drop files to add them.</string>
      <item>
       <widget class="QCheckBox" name="log_check">
        <property name="toolTip">
-        <string>Shows a frame containing rinject's log messages (also available in stdout)</string>
+        <string>Shows a frame containing dnject's log messages (also available in stdout)</string>
        </property>
        <property name="text">
         <string>Show Log</string>
@@ -477,7 +477,7 @@ Drag drag to reorder and drop files to add them.</string>
      <item>
       <widget class="QCheckBox" name="quit_done_check">
        <property name="toolTip">
-        <string>Close rinject if all libraries are sucessfully injected</string>
+        <string>Close dnject if all libraries are sucessfully injected</string>
        </property>
        <property name="text">
         <string>Quit on Success</string>
