Implement process table listing

--- a/ui/main.ui
+++ b/ui/main.ui
@@ -24,7 +24,7 @@
   </property>
   <property name="maximumSize">
    <size>
-    <width>400</width>
+    <width>600</width>
     <height>16777215</height>
    </size>
   </property>
@@ -95,8 +95,11 @@
          <property name="expandsOnDoubleClick">
           <bool>false</bool>
          </property>
+         <attribute name="headerDefaultSectionSize">
+          <number>60</number>
+         </attribute>
          <attribute name="headerStretchLastSection">
-          <bool>false</bool>
+          <bool>true</bool>
          </attribute>
          <column>
           <property name="text">
@@ -538,8 +541,6 @@ hr { height: 1px; border-width: 0; }
    </item>
   </layout>
  </widget>
- <resources>
-  <include location="resources.qrc"/>
- </resources>
+ <resources/>
  <connections/>
 </ui>
