--- a/ui/main.ui
+++ b/ui/main.ui
@@ -335,45 +335,47 @@ Linux Only.</string>
      </property>
      <layout class="QHBoxLayout" name="horizontalLayout">
       <item>
-       <widget class="QListWidget" name="lib_list">
-        <property name="toolTip">
-         <string>List of libraries to inject to target.
+       <layout class="QGridLayout" name="lib_list_layout">
+        <item row="0" column="0">
+         <widget class="QLabel" name="lib_drag_label">
+          <property name="text">
+           <string>Drop libraries here to add</string>
+          </property>
+          <property name="alignment">
+           <set>Qt::AlignCenter</set>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="0">
+         <widget class="QListWidget" name="lib_list">
+          <property name="toolTip">
+           <string>List of libraries to inject to target.
 Drag drag to reorder and drop files to add them.</string>
-        </property>
-        <property name="editTriggers">
-         <set>QAbstractItemView::DoubleClicked|QAbstractItemView::EditKeyPressed|QAbstractItemView::SelectedClicked</set>
-        </property>
-        <property name="dragEnabled">
-         <bool>true</bool>
-        </property>
-        <property name="dragDropMode">
-         <enum>QAbstractItemView::InternalMove</enum>
-        </property>
-        <property name="defaultDropAction">
-         <enum>Qt::LinkAction</enum>
-        </property>
-        <property name="alternatingRowColors">
-         <bool>true</bool>
-        </property>
-        <property name="movement">
-         <enum>QListView::Free</enum>
-        </property>
-        <item>
-         <property name="text">
-          <string>UI Filler Library</string>
-         </property>
+          </property>
+          <property name="styleSheet">
+           <string notr="true">background-color: rgba(0,0,0,0)</string>
+          </property>
+          <property name="editTriggers">
+           <set>QAbstractItemView::DoubleClicked|QAbstractItemView::EditKeyPressed|QAbstractItemView::SelectedClicked</set>
+          </property>
+          <property name="dragEnabled">
+           <bool>true</bool>
+          </property>
+          <property name="dragDropMode">
+           <enum>QAbstractItemView::InternalMove</enum>
+          </property>
+          <property name="defaultDropAction">
+           <enum>Qt::LinkAction</enum>
+          </property>
+          <property name="alternatingRowColors">
+           <bool>true</bool>
+          </property>
+          <property name="movement">
+           <enum>QListView::Free</enum>
+          </property>
+         </widget>
         </item>
-        <item>
-         <property name="text">
-          <string>UI Filler Library 2</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>UI Filler Library 3</string>
-         </property>
-        </item>
-       </widget>
+       </layout>
       </item>
       <item>
        <layout class="QVBoxLayout" name="lib_button_layout">
@@ -524,6 +526,8 @@ Drag drag to reorder and drop files to add them.</string>
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;meta charset=&quot;utf-8&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
 p, li { white-space: pre-wrap; }
 hr { height: 1px; border-width: 0; }
+li.unchecked::marker { content: &quot;\2610&quot;; }
+li.checked::marker { content: &quot;\2612&quot;; }
 &lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'.AppleSystemUIFont'; font-size:13pt; font-weight:400; font-style:normal;&quot;&gt;
 &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; color:#000000;&quot;&gt;[0] Log text goes here.&lt;/span&gt;&lt;/p&gt;
 &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; color:#000000;&quot;&gt;[1] &lt;/span&gt;&lt;span style=&quot; color:#595959;&quot;&gt;Example of trace color&lt;/span&gt;&lt;/p&gt;
