Create injector library with working x86_64 and x86 macOS injection

--- a/ui/main.ui
+++ b/ui/main.ui
@@ -161,6 +161,9 @@
            <property name="text">
             <string>Filter Ownership</string>
            </property>
+           <property name="checked">
+            <bool>true</bool>
+           </property>
           </widget>
          </item>
          <item>
